--- a/templates/pages/game.html
+++ b/templates/pages/game.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 {% extends 'base.html' %} {% load static %} {% block content %}
-<div style="height: 600px; width: 402px;">
-  <iframe
-    style="height:100%;width:100%"
-    src="http://html5gameshq.com/iframed/0h-h1"
-    frameborder="0"
-    scrolling="no"
-  ></iframe>
-  <br /><!-- Please dont remove the link below. Contact us if you have questions. -->
-  <a href="http://html5gameshq.com/?r=embed-ref" target="_blank"
-    >More Games at HTML5GamesHQ...</a
-  >
-</div>
+<script src="http://license.novelgames.com/games/game.js"></script>
+<ins
+  class="novelgames_cloudgame"
+  data-game-short-name="rockpaperscissors"
+  data-language="en"
+></ins>
 {% endblock %}
