--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -22,7 +22,8 @@
         </div>
       </div>
     </div>
-    {% else %}
+    {% endif %} {% endfor %} {% endif %} {% if works %} {% for work in works %}
+    {% if forloop.counter|divisibleby:2 %}
     <div class="row text-center post-container py-3">
       <div class="col-md-7 mb-3">
         <div class="body">
