--- a/templates/recent_activities/activities.html
+++ b/templates/recent_activities/activities.html
@@ -8,11 +8,15 @@
                 <h2 class="py-5 blog-title post-title title"></h2>
             </div>
         </div> -->
-    {% if activities %} {% for activity in activities %} {% if
-    activity.is_published %}
+    {% if activities %} {% if activity.is_published %} {% for activity in
+    activities %}
     <div class="row text-center post-container">
       <div class="col-md-5 mb-3">
-        <img src="{{ post.photo_main.url }}" alt="" class="mb-3 img-fluid" />
+        <img
+          src="{{ activity.photo_main.url }}"
+          alt=""
+          class="mb-3 img-fluid"
+        />
       </div>
       <div class="col-md-7 mb-3">
         <div class="body">
@@ -22,7 +26,7 @@
         </div>
       </div>
     </div>
-    {% endif %} {% endfor %} {% else %}
+    {% endfor %} {% endif %} {% else %}
     <div class="row text-center">
       <div class="col-md-12">
         <p>No Activity Available</p>
