--- a/templates/recent_activities/activities.html
+++ b/templates/recent_activities/activities.html
@@ -8,8 +8,8 @@
                 <h2 class="py-5 blog-title post-title title"></h2>
             </div>
         </div> -->
-    {% if activities %} {% if activity.is_published %} {% for activity in
-    activities %}
+    {% if activities %} {% for activity in activities %} {% if
+    activity.is_published %}
     <div class="row text-center post-container">
       <div class="col-md-5 mb-3">
         <img
@@ -26,7 +26,7 @@
         </div>
       </div>
     </div>
-    {% endfor %} {% endif %} {% else %}
+    {% endif %} {% endfor %} {% elif %}
     <div class="row text-center">
       <div class="col-md-12">
         <p>No Activity Available</p>
