--- a/templates/recent_activities/activities.html
+++ b/templates/recent_activities/activities.html
@@ -8,8 +8,7 @@
                 <h2 class="py-5 blog-title post-title title"></h2>
             </div>
         </div> -->
-    {% if activities %} {% for activity in activities %} {% if
-    activity.is_published %}
+    {% if activities %} {% for activity in activities %}
     <div class="row text-center post-container">
       <div class="col-md-5 mb-3">
         <img
@@ -25,7 +24,7 @@
         </div>
       </div>
     </div>
-    {% endif %} {% endfor %} {% else %}
+    {% endfor %} {% else %}
     <div class="row text-center">
       <div class="col-md-12">
         <p>No Activity Available</p>
