--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -15,7 +15,7 @@
           <div class="square square-exh">
             <div class="front">
               <p class="py-5 px-3">
-                <span class="work-title pink-title">{{exhibition.date | date:"Y"}}</br>{{exhibition.title}}</span>
+                <span class="work-title"><h3 class="pink-title">{{exhibition.date | date:"Y"}}</h3></br>{{exhibition.title}}</span>
               </p>
             </div>
             <div class="back">
