--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -14,9 +14,9 @@
         <div class="square-container square-container-exh">
           <div class="square square-exh">
             <div class="front">
-              <p class="py-5 px-3">
+              <div class="container">
                 <span class="work-title"><h3 class="pink-title">{{exhibition.date | date:"Y"}}</h3></br>{{exhibition.title}}</span>
-              </p>
+            </div>
             </div>
             <div class="back">
               <img
