--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -9,7 +9,7 @@
             </div>
         </div> -->
     <div class="row">
-      {% if exhibitions %} {% for exhibition in exhibitions %}
+      <!-- {% if exhibitions %} {% for exhibition in exhibitions %} -->
       <!-- <div class="col-md-4 mb-5">
         <div class="square-container square-container-exh">
           <div class="square square-exh">
@@ -30,21 +30,21 @@
 
       <div id="container">
         <ul id="lijst">
+          {% if exhibitions %} {% for exhibition in exhibitions %}
           <li class="element">
             <ul>
               <li class="jaartal">{{exhibition.date | date:"Y"}}</li>
               <li class="ondertitel">{{exhibition.title}}</li>
             </ul>
           </li>
+          {% endfor %} {% else %}
         </ul>
 
 
       </div>
 
-      <button id="later">
-        <</button> <button id="vroeger">>
-      </button>
-      {% endfor %} {% else %}
+      <button id="later"></button>
+      <button id="vroeger">></button>
     </div>
     <div class="row text-center">
       <div class="col-md-12">
