--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -26,7 +26,9 @@
     </div>
     <div class="text-center">
       <button id="later">
+        <ion-icon name="arrow-dropleft"></ion-icon>
       </button> <button id="vroeger">
+        <ion-icon name="arrow-dropright"></ion-icon>
       </button>
     </div>
     {% else %}
