--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -9,7 +9,7 @@
             </div>
         </div> -->
     {% if works %} {% for work in works %} {% if work.is_published %}
-    <div class="row text-center post-container">
+    <div class="row work-row text-center post-container">
       <div class="col-md-8 mb-3">
         <img src="{{ work.photo_main.url }}" alt="" class="mb-3 img-fluid" />
       </div>
