--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -1948,8 +1948,8 @@ a:hover {
 /*Works*/
 
 .work-row {
-  margin-bottom: 25px;
-  margin-top: 25px;
+  margin-bottom: 25px !important;
+  margin-top: 25px !important;
 }
 .small {
   display: none;
