--- a/templates/testimonials/testimonials.html
+++ b/templates/testimonials/testimonials.html
@@ -9,7 +9,7 @@
         </div> -->
     <div class="row">
       {% if testimonials %} {% for testimonial in testimonials %}
-      <div class="col-lg-4 mb-5">
+      <div class="col-lg-6 mb-5">
         <div class="square-container">
           <div class="square">
             <div class="front">
@@ -17,9 +17,7 @@
             </div>
             <div class="back">
               <p class="p-3">
-                <span class="work-title grey-title"
-                  >{{ testimonial.name }}-{{ testimonial.title }}</span
-                ><br />
+                <span class="work-title grey-title">{{ testimonial.name }}-{{ testimonial.title }}</span><br />
                 {{ testimonial.testimonial }}
               </p>
             </div>
